--- a/index.html
+++ b/index.html
@@ -5,9 +5,206 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Баллы учеников</title>
     <style>
-        /* Ваши существующие стили остаются */
-        
-        /* Новые стили для формы преподавателя */
+       body {
+            font-family: 'Russo One', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #1a1a1a;
+            color: #ffffff;
+            scroll-behavior: smooth;
+        }
+
+        .cover {
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+
+        .cover h1 {
+            font-size: 48px;
+            color: #ffffff;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            margin-bottom: 20px;
+        }
+
+        .cover-buttons {
+            display: flex;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .cover-button {
+            padding: 15px 30px;
+            font-size: 18px;
+            color: #ffffff;
+            background-color: #9400d3;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            text-transform: uppercase;
+            text-decoration: none;
+            display: inline-block;
+            text-align: center;
+        }
+
+        .cover-button:hover {
+            background-color: #7a00b3;
+            transform: scale(1.05);
+        }
+
+        .content {
+            background-color: #1a1a1a;
+            padding: 20px;
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+
+        .filters {
+            display: flex;
+            justify-content: space-between;
+            margin: 20px 0;
+            gap: 10px;
+            flex-wrap: wrap;
+        }
+
+        .filters select, .filters input {
+            padding: 12px;
+            font-size: 16px;
+            border: 2px solid #9400d3;
+            background-color: #1a1a1a;
+            color: #ffffff;
+            border-radius: 5px;
+            min-width: 200px;
+        }
+
+        #searchInput {
+            flex-grow: 1;
+        }
+
+        #students {
+            margin: 20px 0;
+        }
+
+        .bar-container {
+            width: 100%;
+            margin-bottom: 15px;
+        }
+
+        .student-info {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 5px;
+            align-items: center;
+        }
+
+        .student-name {
+            font-size: 16px;
+            color: #ffffff;
+            font-weight: bold;
+        }
+
+        .student-points {
+            font-size: 14px;
+            color: #cccccc;
+        }
+
+        .bar-wrapper {
+            position: relative;
+            width: 100%;
+            height: 30px;
+            background-color: #333333;
+            border-radius: 6px;
+            overflow: hidden;
+        }
+
+        .bar {
+            height: 100%;
+            background: linear-gradient(90deg, #00ff00 0%, #00cc88 100%);
+            border-radius: 6px;
+            text-align: right;
+            color: #1a1a1a;
+            font-weight: bold;
+            line-height: 30px;
+            transition: width 0.5s ease;
+            box-shadow: 0 0 10px rgba(0,255,0,0.3);
+            padding-right: 10px;
+            box-sizing: border-box;
+            position: relative;
+        }
+
+        .emoji {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 20px;
+            z-index: 2;
+        }
+
+        .points-scale {
+            display: flex;
+            justify-content: space-between;
+            margin: 20px 0 10px;
+            color: #ffffff;
+            font-size: 14px;
+            position: relative;
+        }
+
+        .scale-marker {
+            position: relative;
+            text-align: center;
+            flex: 1;
+        }
+
+        .scale-marker::after {
+            content: '';
+            position: absolute;
+            top: -10px;
+            left: 0;
+            width: 1px;
+            height: 5px;
+            background-color: #ffffff;
+        }
+
+        .scale-marker:first-child::after,
+        .scale-marker:last-child::after {
+            width: 2px;
+            height: 10px;
+        }
+
+        .time-filters {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin: 20px 0;
+            flex-wrap: wrap;
+        }
+
+        .time-filters button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #9400d3;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .time-filters button.active {
+            background-color: #7a00b3;
+            box-shadow: 0 0 10px rgba(148, 0, 211, 0.5);
+        }
+
+        .time-filters button:hover {
+            background-color: #7a00b3;
+        }
         .teacher-panel {
             background-color: #2a2a2a;
             padding: 20px;
