--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
 <script>
     const API_URL = 'https://script.google.com/macros/s/AKfycbwK295-WVyVp7zgqwaxt_wRSkosdxjXnKLaoN5SyLcGZQObBYY5rjMmQ0c4wgcc8Q_J1A/exec';
-    const WRITE_API_URL = 'https://script.google.com/macros/s/ВАШ_НОВЫЙ_ИДЕНТИФИКАТОР/exec'; // Замените на URL нового веб-приложения
+    const WRITE_API_URL = 'https://script.google.com/macros/s/1mTJLxDlxjUKr90wdunvgT4L9AmFMQ5jUolM8wU40wpI/exec'; // Замените на URL нового веб-приложения
     const TEACHER_PASSWORD = 'teacher123'; // Замените на реальный пароль
     const BACKGROUND_IMAGE = 'https://img3.akspic.ru/crops/5/4/7/2/5/152745/152745-dizajn-graficeskij_dizajn-sinij-krasochnost-purpur-3840x2160.jpg';
     // Ваши существующие функции остаются
