--- a/index.html
+++ b/index.html
@@ -834,10 +834,10 @@ if (timeFilters.length > 0) {
         });
     });
 
-    document.getElementById('groupFilter').addEventListener('change', (e) => {
-        currentGroup = e.target.value;
-        displayData();
-    });
+   // document.getElementById('groupFilter').addEventListener('change', (e) => {
+   //     currentGroup = e.target.value;
+   //     displayData();
+   // });
 
     document.getElementById('searchInput').addEventListener('input', (e) => {
         searchQuery = e.target.value.trim();
