--- a/index.html
+++ b/index.html
@@ -839,10 +839,10 @@ if (timeFilters.length > 0) {
    //     displayData();
    // });
 
-    document.getElementById('searchInput').addEventListener('input', (e) => {
-        searchQuery = e.target.value.trim();
-        displayData();
-    });
+    //document.getElementById('searchInput').addEventListener('input', (e) => {
+    //    searchQuery = e.target.value.trim();
+     //   displayData();
+    //});
 
     async function fetchData() {
         try {
