--- a/index.html
+++ b/index.html
@@ -399,9 +399,9 @@
 
 <script>
     // ========== КОНСТАНТЫ ==========
-    const API_URL = 'https://script.google.com/macros/s/AKfycbyT5iovbfNOuTqFEOcTO8__9UUWaMFFZr-ox_lMUf6FOM22sNmVmbduwea0V8cGqL7k/exec';
+    const API_URL = 'https://script.google.com/macros/s/1mTJLxDlxjUKr90wdunvgT4L9AmFMQ5jUolM8wU40wpI/exec';
     const WRITE_API_URL = 'https://script.google.com/macros/s/AKfycbyT5iovbfNOuTqFEOcTO8__9UUWaMFFZr-ox_lMUf6FOM22sNmVmbduwea0V8cGqL7k/exec';
-    const TEACHER_PASSWORD = 't123';
+    const TEACHER_PASSWORD = 'a123';
     const BACKGROUND_IMAGE = 'https://img3.akspic.ru/crops/5/4/7/2/5/152745/152745-dizajn-graficeskij_dizajn-sinij-krasochnost-purpur-3840x2160.jpg';
 
     // ========== ПЕРЕМЕННЫЕ ==========
