--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
 <script>
     // ========== КОНСТАНТЫ ==========
     const API_URL = 'https://script.google.com/macros/s/AKfycbyT5iovbfNOuTqFEOcTO8__9UUWaMFFZr-ox_lMUf6FOM22sNmVmbduwea0V8cGqL7k/exec';
+    const BACKGROUND_IMAGE = 'https://img3.akspic.ru/crops/5/4/7/2/5/152745/152745-dizajn-graficeskij_dizajn-sinij-krasochnost-purpur-3840x2160.jpg';
     const TEACHER_PASSWORD = 't123';
 
     // ========== ПЕРЕМЕННЫЕ ==========
