--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
 <script>
     const API_URL = 'https://script.google.com/macros/s/AKfycbyT5iovbfNOuTqFEOcTO8__9UUWaMFFZr-ox_lMUf6FOM22sNmVmbduwea0V8cGqL7k/exec';
-    const WRITE_API_URL = 'https://script.google.com/macros/s/AKfycbyT5iovbfNOuTqFEOcTO8__9UUWaMFFZr-ox_lMUf6FOM22sNmVmbduwea0V8cGqL7k/exec; // Замените на URL нового веб-приложения
+    const WRITE_API_URL = 'https://script.google.com/macros/s/AKfycbyT5iovbfNOuTqFEOcTO8__9UUWaMFFZr-ox_lMUf6FOM22sNmVmbduwea0V8cGqL7k/exec'; // Замените на URL нового веб-приложения
     const TEACHER_PASSWORD = 'q123'; // Замените на реальный пароль
     const BACKGROUND_IMAGE = 'https://img3.akspic.ru/crops/5/4/7/2/5/152745/152745-dizajn-graficeskij_dizajn-sinij-krasochnost-purpur-3840x2160.jpg';
 
