пытаюсь вернуть учеников.html

--- a/index.html
+++ b/index.html
@@ -734,7 +734,8 @@
             });
         });
     }
-
+ // Загрузка при старте - ВОТ ЭТА СТРОКА ОЧЕНЬ ВАЖНА!
+    loadStudents();
     // ========== ИНИЦИАЛИЗАЦИЯ ==========
 
     document.addEventListener('DOMContentLoaded', function() {
