--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
 
 <script>
     // Простой API URL (старый рабочий)
-    const API_URL = 'https://script.google.com/macros/s/AKfycby4U365iMv8mZVELhEJFjII0CZ262-gpclf_lUPXvoClpQNtDkFQsS-pLGTbxLZ6bK6/exec';
-    const TEACHER_PASSWORD = 'teacher123';
+    const API_URL = 'https://script.google.com/macros/s/AKfycbzR0HyhyFRo-LXPpRPFkTkcPZ3CcsVAVgNB3g63GQX74OjyMGYPvFbWOdgXs86cYbAn/exec';
+    const TEACHER_PASSWORD = 't123';
     
     let studentsData = [];
     let currentGroup = 'all';
