--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
     const BACKGROUND_IMAGE = 'https://img3.akspic.ru/crops/5/4/7/2/5/152745/152745-dizajn-graficeskij_dizajn-sinij-krasochnost-purpur-3840x2160.jpg';
     const API_URL = 'https://script.google.com/macros/s/AKfycbzR0HyhyFRo-LXPpRPFkTkcPZ3CcsVAVgNB3g63GQX74OjyMGYPvFbWOdgXs86cYbAn/exec';
 const TEACHER_PASSWORD = 'teacher123';
-
+document.querySelector('.cover').style.backgroundImage = `url(${BACKGROUND_IMAGE})`;
 let studentsData = [];
 let currentGroup = 'all';
 let currentPeriod = 'all';
