Новая апи без столбца d.html

--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
 
 <script>
     const BACKGROUND_IMAGE = 'https://img3.akspic.ru/crops/5/4/7/2/5/152745/152745-dizajn-graficeskij_dizajn-sinij-krasochnost-purpur-3840x2160.jpg';
-    const API_URL = 'https://script.google.com/macros/s/AKfycbxtG5cbwUmrCgYnuY1Zv8iOQKrXP3JCbzN7IcHd3bKMz7EvtfqQjP4P33XwyTk-RDzc/exec';
-const TEACHER_PASSWORD = 'teacher123';
+    const API_URL = 'https://script.google.com/macros/s/AKfycbzuoR4oj-nwRclfYianYMgeLkE-CY5a7moVw3ehRPijuSaXGXpJil-FN818Y_YmA3Q4/exec';
+const TEACHER_PASSWORD = 't123';
 document.querySelector('.cover').style.backgroundImage = `url(${BACKGROUND_IMAGE})`;
 let studentsData = [];
 let currentGroup = 'all';
