Добавляю подсказки.html

--- a/index.html
+++ b/index.html
@@ -391,6 +391,25 @@ input[type="date"]::-moz-calendar-picker-indicator {
 
         <!-- Панель преподавателя -->
         <div id="teacherPanel" class="teacher-panel" style="display: none;">
+            <!-- Добавьте в панель преподавателя перед формой -->
+<div style="margin-bottom: 15px; text-align: center;">
+    <div style="display: inline-block; position: relative; cursor: help;">
+        <span style="background: #9400d3; color: white; border-radius: 50%; width: 24px; height: 24px; display: inline-flex; align-items: center; justify-content: center; font-weight: bold;">?</span>
+        <div class="points-info-tooltip">
+            <h4>Критерии оценивания (макс. 7 баллов за занятие):</h4>
+            <ul>
+                <li>✅ Посещение - 1 балл</li>
+                <li>✅ Ответы на вопросы преподавателя - 1 балл</li>
+                <li>✅ Выполнение основных заданий (100%) - 1 балл</li>
+                <li>✅ Помощь преподавателю - 1 балл</li>
+                <li>✅ Выполнение бонусных заданий - 1 балл</li>
+                <li>✅ За выдающиеся успехи - 1 балл</li>
+                <li>✅ Выполнение всего модуля на 100% - 1 балл</li>
+            </ul>
+        </div>
+    </div>
+    <span style="margin-left: 10px; color: #ccc;">Наведите на иконку для информации о баллах</span>
+</div>
             <h3>📝 Журнал баллов - Групповое редактирование</h3>
             
             <div class="teacher-form">
