--- a/index.html
+++ b/index.html
@@ -368,6 +368,54 @@ input[type="date"]::-moz-calendar-picker-indicator {
     filter: invert(0.5) sepia(1) saturate(5) hue-rotate(250deg);
     cursor: pointer;
 }
+        /* Стили для всплывающей подсказки о баллах */
+.points-info-tooltip {
+    display: none;
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #2a2a2a;
+    border: 2px solid #9400d3;
+    border-radius: 8px;
+    padding: 15px;
+    width: 320px;
+    z-index: 1000;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+}
+
+.points-info-tooltip h4 {
+    margin: 0 0 8px 0;
+    color: #ffffff;
+    text-align: center;
+}
+
+.points-info-tooltip ul {
+    margin: 0;
+    padding-left: 20px;
+}
+
+.points-info-tooltip li {
+    margin-bottom: 5px;
+    color: #ffffff;
+    font-size: 14px;
+}
+
+/* Показывать подсказку при наведении */
+div[style*="cursor: help"]:hover .points-info-tooltip {
+    display: block;
+}
+
+/* Стрелочка у подсказки */
+.points-info-tooltip::after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    border: 8px solid transparent;
+    border-top-color: #9400d3;
+}
     </style>
 </head>
 <body>
