--- a/index.html
+++ b/index.html
@@ -373,8 +373,8 @@ input[type="date"]::-moz-calendar-picker-indicator {
     display: none;
     position: absolute;
     bottom: 100%;
-    left: 0;
-    transform: none;
+    left: 50%;
+    transform: translateX(-50%);
     background: #2a2a2a;
     border: 2px solid #9400d3;
     border-radius: 8px;
@@ -382,7 +382,6 @@ input[type="date"]::-moz-calendar-picker-indicator {
     width: 320px;
     z-index: 1000;
     box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-     margin-bottom: 10px;
 }
 
 .points-info-tooltip h4 {
@@ -393,15 +392,13 @@ input[type="date"]::-moz-calendar-picker-indicator {
 
 .points-info-tooltip ul {
     margin: 0;
-    padding-left: 0; /* Убираем отступ слева */
-    list-style: none; /* Убираем стандартные маркеры */
+    padding-left: 20px;
 }
 
 .points-info-tooltip li {
     margin-bottom: 5px;
     color: #ffffff;
     font-size: 14px;
-    padding-left: 0;
 }
 
 /* Показывать подсказку при наведении */
@@ -414,7 +411,7 @@ div[style*="cursor: help"]:hover .points-info-tooltip {
     content: '';
     position: absolute;
     top: 100%;
-    left: 20px;
+    left: 50%;
     transform: translateX(-50%);
     border: 8px solid transparent;
     border-top-color: #9400d3;
