--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@ input[type="date"]::-moz-calendar-picker-indicator {
     width: 320px;
     z-index: 1000;
     box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+    text-align: left;
 }
 
 .points-info-tooltip h4 {
@@ -392,7 +393,8 @@ input[type="date"]::-moz-calendar-picker-indicator {
 
 .points-info-tooltip ul {
     margin: 0;
-    padding-left: 20px;
+    padding-left: 0; /* Убираем отступ слева */
+    list-style: none; /* Убираем стандартные маркеры */
 }
 
 .points-info-tooltip li {
